--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "massive": "^3.0.0",
+    "passport": "^0.3.2",
+    "passport-local": "3.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
