working on setting up passport

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "express-session": "^1.15.3",
     "massive": "^3.0.0",
     "passport": "^0.3.2",
+    "passport-google": "^0.3.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-plus": "^0.5.1",
     "passport-local": "3.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
