styling home page

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "passport-local": "3.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-hash-router": "^0.2.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.1",
